<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">BookStore</string>
    <string name="title_books">Books</string>
    <string name="title_synopsis">Synopsis</string>
    <string name="title_notifications">Notifications</string>
    <string name="textview">TextView</string>
    <string name="book_image">Book Image</string>
    <string name="_10">10€</string>
    <string name="star">star</string>
    <string name="trash">trash</string>
    <string name="morir_ines_panas">Morir no es lo que más duele</string>
    <string name="ines_panas">Inés Planas</string>
    <string name="yo_julia">Yo, Julia</string>
    <string name="santiago">Santiago Posteguillo</string>
    <string name="carlos_lopez_book">La vida en cuatro letras</string>
    <string name="carlos_lopez">Carlos López</string>
    <string name="pasos_en_escalera">Tus pasos en la escalera</string>
    <string name="antonio_muñoz">Antonio Muñoz Molina</string>
    <string name="cementerio_animales">Cementerio de animales</string>
    <string name="stephen_king">Stephen King</string>
    <string name="sidi">Sidi</string>
    <string name="perez_reverte">Arturo Pérez Reverte</string>
    <string name="jaula_de_oro">Una jaula de oro</string>
    <string name="camila_lackberg">Camila Lackberg</string>
    <string name="lo_mejor_de_ir">Lo mejor de ir es volver</string>
    <string name="albert_espinosa">Albert Espinosa</string>
    <string name="book">Book:</string>
    <string name="synopsis0">Un hombre aparece ahorcado en un pinar a las afueras de Madrid, con los ojos arrancados de cuajo. En uno de sus bolsillos se halla un papel con el nombre y la dirección de una mujer:Sara Azcárraga, que vive a pocos kilómetros del escenario del crimen.</string>
    <string name="synopsis1">192 d.C. Varios hombres luchan por un imperio, pero Julia, hija de reyes, madre de césares y esposa de emperador, piensa en algo más ambicioso: una dinastía.</string>
    <string name="synopsis2" tools:ignore="Typos">Partiendo de un momento extraordinariamente difícil de la vida del autor, este libro empieza con una pregunta fascinante: ¿llevamos la felicidad escrita en nuestros genes?</string>
    <string name="synopsis3" tools:ignore="Typos">Un hombre anticipa con ilusión el momento de reunirse con su esposa mientras ultima los preparativos de su nuevo hogar en Lisboa. Atrás queda una etapa de sus vidas en Nueva York marcada por el indeleble recuerdo del 11-S.</string>
    <string name="synopsis4">Church estaba allí otra vez, como Louis Creed temía y deseaba. Porque su hijita Ellie le había encomendado que cuidara del gato, y Church había muerto atropellado. Louis lo había comprobado: el gato estaba muerto, incluso lo había enterrado más allá del cementerio de animales.</string>
    <string name="synopsis5">En él se funden de un modo fascinante la aventura, la historia y la leyenda. Hay muchos Cid en la tradición española, y éste es el mío.</string>
    <string name="synopsis6">Faye, con un oscuro pasado, ha conseguido todolo que siempre había soñado, un marido atractivo, una hija a la que quiere y, sobre todo, estatus social y una vida llena de lujo. Pero cuando, de un día para otro, esta vida perfecta se va al traste, surge una nueva mujer intrépida y vengadora.</string>
    <string name="synopsis7">Bella historia sobre los recuerdos, el perdón y el amor que transcurre el 23 de abril, el día del libro y las rosas, entre la ciudad de Barcelona y las islas de Ischia y Menorca.</string>
    <string name="your_opinion">Your Opinion</string>
</resources>