<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_refactor">

    <fragment
        android:id="@+id/navigation_refactor"
        android:name="com.example.bookstore.ui.books.BooksFragment"
        android:label="@string/title_books"
        tools:layout="@layout/fragment_books" />

    <fragment
        android:id="@+id/navigation_synopsis"
        android:name="com.example.bookstore.ui.synopsis.SynopsisFragment"
        android:label="@string/title_synopsis"
        tools:layout="@layout/fragment_synopsis" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.bookstore.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
</navigation>